---------------------------------------------------------------------------------------------------
Version: 2.2.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.2.2
Date: 2024-05-04
  Bugfixes:
    - Fix that underscores were not considered valid characters in mod names when performing icon filename validation.
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2024-05-04
  Bugfixes:
    - Fix that the table check in reskins.lib.append_tier_labels was lost in the deprecation. 
      - This restores the historical behavior, but mods should now use one of:
        - reskins.lib.tiers.add_tier_labels_to_icon, taking an IconData object
        - reskins.lib.tiers_add_tier_labels_to_icons, taking an array of IconData objects
        - reskins.lib.create_icon_with_tier_labels, taking an icon filename and icon size and optional mipmaps, scale, shift and tint.
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2024-05-04
  Changes:
    - Migrated custom color settings to `color-setting`, allowing for the use of a color picker in-game
    - Significant rework of internals (ongoing), and the API is being reworked.
      - Some old API functions have been marked deprecated, and will be removed in a future version.
      - The entire old API surface will be deprecated (eventually), and removed in a later version.
---------------------------------------------------------------------------------------------------
Version: 2.1.7
Date: 2023-12-24
  Bugfixes:
    - Fixed that parsing of Angels pipe materials was not returning the expected file paths
---------------------------------------------------------------------------------------------------
Version: 2.1.6
Date: 2023-12-23
  Features:
    - Added `reskins.lib.add_tier_labels_to_entity`